# kea_databases

./: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  start.sh  stop.sh
database/dummy_data/: accounts.sql  character.sql  sp.sql  static.sql  trigger.sql  views.sql
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20230912_000001_create_tables.rs  m20230912_000002_add_triggers.rs  m20230912_000003_functions.rs  m20230912_000003_stored_procedures.rs  m20230912_000004_stored_procedures.rs  m20230912_000005_dummy_data_2.rs  m20230912_000005_events.rs  m20230912_000006_produce_item_drops.rs  m20230912_000006_views.rs  m20230912_000011_dummy_data.rs  m20230912_000012_dummy_data_2.rs
src/: main.rs  middleware.rs  server.rs
src/entity/: account.rs  character.rs  class.rs  class_skill.rs  guild.rs  guild_member.rs  inventory.rs  item.rs  item_piece.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  weapon_skill.rs
src/repo/: mod.rs
src/repo/ddbms/: account_repo.rs  character_repo.rs  enums.rs  mod.rs  models.rs
src/repo/gdbms/: account_repo.rs  character_repo.rs  enums.rs  (+5 more)
src/routes/: auth.rs  index.rs  mod.rs
src/utils/: app.rs  auth.rs  claims.rs  extensions.rs  mod.rs  traits.rs
src/website/: index.rs
templates/: 404.html  base.html  index.html
templates/auth/: login.html  register.html
templates/documenia/: character.html  create_character.html  index.html
templates/graphia/: character.html  create_character.html  index.html
templates/relania/: character.html  create_character.html  index.html
templates/snippets/: nav.html
(+28 files in other folders)
