[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "./migration" }
actix-web = "4.4.0"
dotenv = "0.15.0"
serde = "1.0.188"
tracing = "0.1.37"
env_logger = "0.10.0"
tera = "1.19.1"
rand = "0.8.5"
sea-orm = "0.12.3"
chrono = "0.4.31"
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
futures-util = "0.3.28"
surrealdb = "1.0.0"
async-trait = "0.1.74"

[profile.release]
strip = true