[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "./migration" }
actix-web = "4.4.1"
dotenv = "0.15.0"
serde = "1.0.195"
tracing = "0.1.40"
env_logger = "0.10.1"
tera = "1.19.1"
rand = "0.8.5"
sea-orm = "0.12.10"
chrono = "0.4.31"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
futures-util = "0.3.30"
surrealdb = "1.1.0"
async-trait = "0.1.77"

[profile.release]
strip = true